tests/outref/TSC00I.ref

-- TSC00I : select without a from with a syntax error

select * asdfasdfsdf;

[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected IDENTIFIER_ALONE, expecting EXCEPT or UNION or SEMICOLON or ENDOFFILE
LINE 3:1: select * asdfasdfsdf;
                   ^^^^^^^^^^^
OCTO> select * asdfasdfsdf;
OCTO> 
